--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
 <footer>
 	{% if site.your_name %}
-	<p class="footerText">ディベロッパー：コン・リー{% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}</p>
+	<p class="footerText">{% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}
+	<br>デザイナー：須藤　成美　
+	</p>
 	{% endif %}
-	<p class="footerText">デザイナー：須藤　成美　</p>
 	<div class="footerIcons">
 
 		{% if site.facebook_username %}
