--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="{{ page.lang | default: 'jp' }}">
 
 {% include head.html %}
 
@@ -47,7 +47,7 @@
                         </div>
                         <div class="appDescriptionContainer">
                             <p class ="appDescription">
-                                {{ site.app_description }}
+                                {{ site.data[page.lang].app_description }}
                             </p>
                         </div>
                         <div class="downloadButtonsContainer">
