--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,9 +52,9 @@
                         </div>
                         <div class="downloadButtonsContainer">
                             {% if site.playstore_link %}
-                                <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
+                                <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="{{ 'assets/playstore.png' | relative_url }}"></a>
                             {% endif %}
-                            <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
+                            <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="{{ 'assets/appstore.png' | relative_url }}"></a>
                         </div>
                     </div>
                     {% include features.html %}
