--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
 	{% if site.data[page.lang].your_name %}
 	<p class="footerText">{% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.data[page.lang].your_name }}{% if site.your_link %}</a>{% endif %}
-	<br>{% if page.lang == 'jp' %}デザイナー：須藤 成美{% else %}Designer: Narumi Sudo{% endif %}
+	<br>{% if page.lang == 'jp' %}デザイナー：須藤 成美{% else %}Designer: Narumi Suto{% endif %}
 	</p>
 	{% endif %}
 	<div class="footerIcons">
